--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 executing==2.1.0
 fastjsonschema==2.21.1
+flatiron_cleaner==0.1.1
 fonttools==4.55.3
 formulaic==1.1.1
 fqdn==1.5.1
@@ -104,7 +105,7 @@ tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
-tzdata==2024.2
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.3.0
 wcwidth==0.2.13
