--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.5
+joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -92,6 +93,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.22.3
+scikit-learn==1.6.1
 scipy==1.15.1
 Send2Trash==1.8.3
 setuptools==75.8.0
@@ -100,6 +102,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.4.2
 traitlets==5.14.3
