--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@ data/
 # Virtual environment
 myenv/
 
+# Jupyter notebook checkpoints
+*-checkpoint.ipynb
+
 # macOS system files
 .DS_Store
+mUC/notebooks/clustering.ipynb
