--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ fonttools==4.55.3
 formulaic==1.1.1
 fqdn==1.5.1
 h11==0.14.0
+hdbscan==0.8.40
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
@@ -56,6 +57,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 kiwisolver==1.4.8
 lifelines==0.30.0
+llvmlite==0.44.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
@@ -66,6 +68,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
+numba==0.61.2
 numpy==2.2.2
 overrides==7.7.0
 packaging==24.2
@@ -82,6 +85,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+pynndescent==0.5.13
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
@@ -105,10 +109,12 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2025.2
+umap-learn==0.5.7
 uri-template==1.3.0
 urllib3==2.3.0
 wcwidth==0.2.13
