--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,7 @@ packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==1.0.1
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
@@ -105,6 +106,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+statsmodels==0.14.4
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
