--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
+effectsize==1.0.0
 executing==2.1.0
 fastjsonschema==2.21.1
 flatiron_cleaner==0.1.1
@@ -32,6 +33,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 interface-meta==1.3.0
+iptw-survival==0.1.3
 ipykernel==6.29.5
 ipython==8.31.0
 ipywidgets==8.1.5
