--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ mUC/notebooks/clustering.ipynb
 mUC/notebooks/clustering_90d.ipynb
 mUC/notebooks/Untitled.ipynb
 mUC/notebooks/test.ipynb
+mUC/notebooks/clustering_pembro.ipynb
+mUC/notebooks/survival_cluster.ipynb
+mUC/notebooks/survival_cluster_pembro.ipynb
