--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,11 @@ cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
+ecos==2.0.14
 effectsize==1.0.0
 executing==2.1.0
 fastjsonschema==2.21.1
-flatiron_cleaner==0.1.1
+flatiron_cleaner==0.1.2
 fonttools==4.55.3
 formulaic==1.1.1
 fqdn==1.5.1
@@ -33,7 +34,7 @@ httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 interface-meta==1.3.0
-iptw-survival==0.1.3
+iptw-survival==0.1.4
 ipykernel==6.29.5
 ipython==8.31.0
 ipywidgets==8.1.5
@@ -71,7 +72,9 @@ nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
 numba==0.61.2
+numexpr==2.10.2
 numpy==2.2.2
+osqp==0.6.7.post3
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -95,12 +98,14 @@ python-json-logger==3.2.1
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
+qdldl==0.1.7.post5
 referencing==0.36.1
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.22.3
 scikit-learn==1.6.1
+scikit-survival==0.24.1
 scipy==1.15.1
 Send2Trash==1.8.3
 setuptools==75.8.0
