updated data cleaning
specifically cleaning for trial patients

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ mUC/notebooks/test.ipynb
 mUC/notebooks/clustering_pembro.ipynb
 mUC/notebooks/survival_cluster.ipynb
 mUC/notebooks/survival_cluster_pembro.ipynb
+mUC/notebooks/gbm.ipynb
+mUC/notebooks/.ipynb_checkpoints/survival_full_cohort-checkpoint.ipynb
+mUC/notebooks/data_cleaning_mUC_test.ipynb
+mUC/notebooks/data_cleaning_mUC_training.ipynb
+mUC/notebooks/.ipynb_checkpoints/survival_full_cohort-checkpoint.ipynb
