--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ mUC/notebooks/.ipynb_checkpoints/survival_full_cohort-checkpoint.ipynb
 mUC/notebooks/data_cleaning_mUC_test.ipynb
 mUC/notebooks/data_cleaning_mUC_training.ipynb
 mUC/notebooks/.ipynb_checkpoints/survival_full_cohort-checkpoint.ipynb
+mUC/notebooks/calculating_risk_score.ipynb
