--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ mUC/notebooks/survival_cluster_pembro75p.ipynb
 mUC/notebooks/survival_cluster_pembro90d.ipynb
 mUC/notebooks/survival_pembro75p.ipynb
 mUC/notebooks/survival_pembro90d.ipynb
+mUC/outputs/Brief Report.docx
+mUC/.DS_Store
