--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 ecos==2.0.14
 effectsize==1.0.0
+et_xmlfile==2.0.0
 executing==2.1.0
 fastjsonschema==2.21.1
 flatiron_cleaner==0.1.2
@@ -74,6 +75,7 @@ notebook_shim==0.2.4
 numba==0.61.2
 numexpr==2.10.2
 numpy==2.2.2
+openpyxl==3.1.5
 osqp==0.6.7.post3
 overrides==7.7.0
 packaging==24.2
@@ -114,6 +116,8 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
+tableone==0.9.5
+tabulate==0.9.0
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
